@@ -11,8 +11,8 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import static org.springframework.http.HttpHeaders.*;
 
@@ -23,34 +23,25 @@ import static org.springframework.http.HttpHeaders.*;
 @EnableGlobalMethodSecurity(prePostEnabled = true, securedEnabled = true, jsr250Enabled = true)
 @Order(1)
 public class SecurityConfig extends WebSecurityConfigurerAdapter {
-//region PROPERTIES
-//endregion
 
-//region CONSTRUCTORS
-//endregion
-
-//region HELPER METHODS
     @Override
     protected void configure(HttpSecurity http) throws Exception {
         http.authorizeRequests().anyRequest().permitAll();
         http.cors();
         http.csrf().disable();
-        super.configure(http);
     }
 
     @Override
     public void configure(WebSecurity web) {
         web.ignoring().antMatchers("/actuator/health/**", "/heartbeat/**", "/api/v1/**");
     }
-    //endregion
 
-    //region BEANS
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         final CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(Collections.unmodifiableList(Collections.singletonList("*")));
-        configuration.setAllowedMethods(Collections.unmodifiableList(Arrays.asList("HEAD", "GET", "POST", "PUT", "DELETE", "PATCH")));
-        configuration.setAllowedHeaders(Collections.unmodifiableList(Arrays.asList(AUTHORIZATION, CACHE_CONTROL, CONTENT_TYPE, "JWT")));
+        configuration.setAllowedMethods(List.of("HEAD", "GET", "POST", "PUT", "DELETE", "PATCH"));
+        configuration.setAllowedHeaders(List.of(AUTHORIZATION, CACHE_CONTROL, CONTENT_TYPE, "JWT"));
         configuration.setExposedHeaders(Collections.unmodifiableList(Collections.singletonList(CONTENT_TYPE)));
         final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
@@ -65,5 +56,4 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
         filterRegistrationBean.setFilter(new SecurityFilter());
         return filterRegistrationBean;
     }*/
-//endregion
 }
